deployment/ingress-nginx/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classifier
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, If-Modified-Since"
spec:
  ingressClassName: nginx
  rules:
  - host: classifier.saidsef.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: classifier
            port:
              number: 7070
